Fix text-overflow mixin

--- a/css/wee.mixins.less
+++ b/css/wee.mixins.less
@@ -2335,7 +2335,7 @@
 	outline: ~'@{value}';
 }
 .text-overflow (@value) {
-	.text-overflow(@value);
+	text-overflow: @value;
 }
 .white-space (@value) {
 	.white-space(@value);
